--- a/elements/crew-team-manager-erg/crew-team-manager-erg-list-results.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg-list-results.html
@@ -56,10 +56,10 @@
                     <crew-team-manager-avatar class="erg-avatar" value="[[item.number]] % 10"></crew-team-manager-avatar>
                     <div class="erg-info">
                         <div class="erg-info-number">
-                            [[item.number]]
+                            Number: [[item.number]]
                         </div>
-                        <div class="erg-info-location">
-                            [[item.location]]
+                        <div class="erg-info-model">
+                            Model: [[item.model]]
                         </div>
                     </div>
                 </div>
