--- a/elements/crew-team-manager-finance/crew-team-manager-finance-list-results.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance-list-results.html
@@ -56,10 +56,10 @@
                     <crew-team-manager-avatar class="finance-avatar" value="[[item.reason]]"></crew-team-manager-avatar>
                     <div class="finance-info">
                         <div class="finance-info-name">
-                            [[item.reason]]
+                            Reason: [[item.reason]]
                         </div>
                         <div class="finance-info-gross">
-                            [[item.gross]]
+                            Gross: [[item.gross]]
                         </div>
                     </div>
                 </div>
