--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-detail.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-detail.html
@@ -102,6 +102,8 @@
 
         <firebase-document id="fanout" app-name="laborsync-ctm">
         </firebase-document>
+        <firebase-document id="firebase-team" app-name="laborsync-ctm" path="/teams/{{_data.team}}" data="{{_team}}">
+        </firebase-document>
 
         <app-header-layout id="layout">
 
@@ -115,8 +117,8 @@
             </app-header>
             <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
                 <crew-team-manager-fleet-detail-loading id="loading"></crew-team-manager-fleet-detail-loading>
-                <crew-team-manager-fleet-detail-results id="results" data="{{_data}}" team={{_team}} athlete="[[athletes]]" oar="[[oars]]"
-                    rigger="[[riggers]]"></crew-team-manager-fleet-detail-results>
+                <crew-team-manager-fleet-detail-results id="results" data="{{_data}}" team={{_team}} athlete="[[_athletes]]" oar="[[_oars]]"
+                    rigger="[[_riggers]]"></crew-team-manager-fleet-detail-results>
                 <crew-team-manager-fleet-detail-message id="message"></crew-team-manager-fleet-detail-message>
             </iron-pages>
 
@@ -145,8 +147,7 @@
             static get observers() {
                 return [
                     '_updatePage(boat)',
-                    '_changePage(page)',
-                    '_getData(_athletes.splices, _oars.splices, _riggers.splices)'
+                    '_changePage(page)'
                 ]
             }
 
@@ -173,21 +174,6 @@
                         type: Object
                     },
 
-                    athletes: {
-                        type: Array,
-                        value: []
-                    },
-
-                    oars: {
-                        type: Array,
-                        value: []
-                    },
-
-                    riggers: {
-                        type: Array,
-                        value: []
-                    },
-
                     _team: {
                         type: Object,
                         value: {}
@@ -200,46 +186,6 @@
 
                     teamId: String
 
-                }
-            }
-
-            _getData(athletes, oars, riggers) {
-                let value = {};
-                let index;
-                let path;
-                let name;
-
-                if (athletes) {
-                    index = athletes.indexSplices[0].object.length - 1;
-                    path = 'athletes/' + athletes.indexSplices[0].object[index].$key;
-                    this.$.fanout.getStoredValue(path)
-                        .then((val) => {
-                            name = val.firstName + ' ' + val.lastName;
-                            value.name = name;
-                        });
-                    this.athletes.push(value);
-                }
-
-                if (oars) {
-                    index = oars.indexSplices[0].object.length - 1;
-                    path = 'oars/' + oars.indexSplices[0].object[index].$key;
-                    this.$.fanout.getStoredValue(path)
-                        .then((val) => {
-                            name = val.name;
-                            value.name = name;
-                        });
-                    this.oars.push(value);
-                }
-
-                if (riggers) {
-                    index = riggers.indexSplices[0].object.length - 1;
-                    path = 'riggers/' + riggers.indexSplices[0].object[index].$key;
-                    this.$.fanout.getStoredValue(path)
-                        .then((val) => {
-                            name = val.seat + ', ' + val.side;
-                            value.name = name;
-                        });
-                    this.riggers.push(value);
                 }
             }
 
@@ -264,19 +210,7 @@
                 }));
             }
 
-
-
-            _resetData() {
-                this._athletes = {};
-                this._oars = {};
-                this._riggers = {};
-                this.athletes = [];
-                this.oars = [];
-                this.riggers = [];
-            }
-
             _handleActionBack(e) {
-                this._resetData();
                 this.dispatchEvent(new CustomEvent(crewTeamManagerFleetDetail.is + '-action-back', {
                     bubbles: true,
                     composed: true
