--- a/elements/crew-team-manager-race/crew-team-manager-race-list-results.html
+++ b/elements/crew-team-manager-race/crew-team-manager-race-list-results.html
@@ -59,7 +59,7 @@
                             [[item.eventName]]
                         </div>
                         <div class="race-info-time">
-                            [[item.raceTime]]
+                            Race Time: [[item.raceTime]]
                         </div>
                     </div>
                 </div>
