--- a/elements/crew-team-manager-rigger/crew-team-manager-rigger-detail-results.html
+++ b/elements/crew-team-manager-rigger/crew-team-manager-rigger-detail-results.html
@@ -62,6 +62,9 @@
                     <div id="subhead">
                         Details:
                     </div>
+                    <div id="team">
+                        Team: [[team.teamName]]
+                    </div>
                     <div id="boat">
                         Boat: [[boatName]]
                     </div>
@@ -104,6 +107,11 @@
                     boatName: {
                         type: String,
                         value: 'none'
+                    },
+
+                    team: {
+                        type: Object,
+                        value: {}
                     }
 
                 }
