--- a/elements/crew-team-manager-rigger/crew-team-manager-rigger-detail.html
+++ b/elements/crew-team-manager-rigger/crew-team-manager-rigger-detail.html
@@ -62,7 +62,7 @@
 
         <firebase-document id="firebase-boat" app-name="laborsync-ctm" path="/boats/{{_data.boat}}" data="{{_boat}}">
         </firebase-document>
-        <firebase-document id="firebase-team" app-name="laborsync-ctm" path="/teams/{{_boat.team}}" data="{{_team}}">
+        <firebase-document id="firebase-team" app-name="laborsync-ctm" path="/teams/{{_data.team}}" data="{{_team}}">
         </firebase-document>
 
         <app-header-layout id="layout">
