--- a/elements/crew-team-manager-roster/crew-team-manager-roster-erg-list-results.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster-erg-list-results.html
@@ -57,10 +57,10 @@
                     <crew-team-manager-avatar class="erg-avatar" value="[[item.number]] % 10"></crew-team-manager-avatar>
                     <div class="erg-info">
                         <div class="erg-info-number">
-                            [[item.number]]
+                            Number: [[item.number]]
                         </div>
-                        <div class="erg-info-location">
-                            [[item.location]]
+                        <div class="erg-info-model">
+                            Model: [[item.model]]
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                         bubbles: true,
                         composed: true,
                         detail: {
-                            erg: e.model.item.$key,
+                            erg: e.model.item,
                         }
                     }));
 
