--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule-detail-results.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule-detail-results.html
@@ -109,7 +109,7 @@
                             <div class="race" on-click="_handleItemClick">
                                 <div class="race-info">
                                     <div class="race-info-name">
-                                        Event: [[item.eventNme]], Race time: [[item.raceTime]]
+                                        Event: [[item.eventName]], Race time: [[item.raceTime]]
                                     </div>
                                 </div>
                             </div>
